# mirage-vkfs

./: .gitignore  README.md  pyproject.toml
docs/: dify.mdx
examples/agents/: langchain_agent.py  openai_agents_sandbox_agent.py
examples/dify/: dify.py
mirage_vkfs/: __init__.py
mirage_vkfs/accessor/: __init__.py  dify.py
mirage_vkfs/commands/: spec.py
mirage_vkfs/commands/builtin/dify/: __init__.py  awk.py  cat.py  cut.py  find.py  grep.py  head.py  ls.py  rg.py  search.py  sed.py  sort.py  stat.py  tail.py  tree.py  uniq.py  wc.py
mirage_vkfs/core/dify/: _client.py  find.py  glob.py  grep.py  path.py  read.py  readdir.py  search.py  stat.py  stream.py  tree.py  walk.py
mirage_vkfs/ops/dify/: __init__.py  grep.py  read.py  readdir.py  search.py  stat.py
mirage_vkfs/resource/dify/: __init__.py  dify.py  prompt.py
tests/: test_workspace_integration.py
tests/commands/builtin/dify/: test_cat.py  test_find.py  test_grep.py  test_head.py  test_ls.py  test_rg.py  test_search.py  test_sed.py  test_stat.py  test_tail.py  test_text_filters.py  test_tree.py  test_wc.py
tests/core/dify/: test__client.py  test_find.py  test_glob.py  test_grep.py  test_path.py  test_read.py  test_readdir.py  test_search.py  test_stat.py  test_stream.py  test_tree.py  test_walk.py
tests/ops/dify/: test_grep.py  test_read.py  test_readdir.py  test_search.py  test_stat.py
tests/resource/dify/: test_resource.py
