[project]
name = "mirage-vkfs"
version = "0.0.1"
description = "External Mirage virtual knowledge filesystem resources."
readme = {file = "docs/dify.mdx", content-type = "text/markdown"}
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mirage-ai @ git+https://github.com/strukto-ai/mirage.git@7adc1c4ff852c5d88b12ad60e791984bb55f2fb0#subdirectory=python",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mirage_vkfs*"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.36.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --import-mode=importlib"
