[project]
name = "mirage-vkfs"
version = "0.0.1"
description = "External Mirage virtual knowledge filesystem resources."
readme = {file = "docs/dify.mdx", content-type = "text/markdown"}
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mirage-ai @ git+https://github.com/strukto-ai/mirage.git@38a9689afae7c4bdd99a734cdf9670ca9ed0a3b6#subdirectory=python",
]

[project.optional-dependencies]
langchain = [
    "deepagents>=0.4.12",
    "langchain-openai>=1.2.0",
]
openai = [
    "openai-agents>=0.14.7",
]
agents = [
    "mirage-vkfs[langchain,openai]",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mirage_vkfs*"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.36.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --import-mode=importlib"
